# metroidvania

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  contributions.md  helloworld.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CI-pipeline.yml
assets/: manifest.json
assets/images/player/pixellab/: student_ideas.pxo
data/maps/: better.tsx  boss_room.tmj  pixil-frame-1.tsx  start_room.tmj  test.json  test.tmj
presentations/initial/: slides.aux  slides.fdb_latexmk  slides.fls  slides.nav  slides.tex  slides.toc  slides.vrb
presentations/progress1/: slides.fdb_latexmk  slides.fls  slides.tex
presentations/progress1/_images/: Unbenanntes Diagramm (1).drawio
src/: main.cpp
src/entities/: player.h  race_condition_enemy.h  race_condition_slime.h
src/entities/base/: base_enemy.cpp  base_enemy.h  enemy_physics.cpp  enemy_physics.h  enemy_state.h  entity_physics.cpp  entity_physics.h
src/entities/player/: attack_layer.h  player.cpp  player.h
src/entities/player/states/: ascending_state.cpp  ascending_state.h  descending_state.cpp  descending_state.h  idle_state.cpp  idle_state.h  landing_state.cpp  landing_state.h  peak_state.cpp  peak_state.h  player_state.h  pre_jump_state.cpp  pre_jump_state.h  running_state.cpp  running_state.h  walking_state.cpp  walking_state.h
src/entities/race_condition_slime/: race_condition_slime.cpp  race_condition_slime.h
src/entities/race_condition_slime/states/: attack_state.cpp  attack_state.h  chase_state.cpp  chase_state.h  idle_state.cpp  idle_state.h  recover_state.cpp  recover_state.h  windup_state.cpp  windup_state.h
src/world/: world.cpp  world.h
tests/unit/: base_enemy_tests.cpp  enemy_test_access.h  player_state_tests.cpp  race_condition_slime_tests.cpp
